[package]
name = "fang_oost_cal_charts"
version = "0.1.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]

[dependencies]
fang_oost_option = "0.27"
cf_functions = "0.6.2"
num-complex = "0.2"
cuckoo = "0.7.0"
serde_json = "1.0"
serde = "1.0"
rayon = "1.0.1"
serde_derive = "1.0"
[dev-dependencies]
